User Manual Complete

--- a/Manual/manual.tex
+++ b/Manual/manual.tex
@@ -39,9 +39,44 @@ My program has been tested, and works on Windows 7 and Vista. Although the progr
 
 \subsubsection{Installing Python 3.4}
 
-\subsubsection{Installing PyQt}
+To install Python 3.4, first you must go to the web page: \url{https://www.python.org/downloads/release/python-340/}. The following web page will be presented.
 
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/DownloadingPython.pdf}
+    \caption{Downloading Python 3.4} \label{fig:DownloadingPython}
+\end{figure}
 
+Select the appropriate installer for your computer. Once the installer has been downloaded, click on the downloaded file.
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/InstallingPython.pdf}
+    \caption{Installing Python 3.4} \label{fig:InstallingPython}
+\end{figure}
+
+The figure above shows the python set up process. Click next on both installer windows and wait for the installing process to complete. After the installer has finished, python 3.4 will now be installed, and ready to use on your computer.
+
+\subsubsection{Installing PyQt 4}
+
+To install PyQt 4, first you must go to the web page: \url{http://www.riverbankcomputing.co.uk/software/pyqt/download}. The following web page will be presented.
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/DownloadingPyQt.pdf}
+    \caption{Downloading PyQt} \label{fig:DownloadingPyQt}
+\end{figure}
+
+Select the appropriate installer of PyQt 4 for your computer. Once the installer has been downloaded, click on the downloaded file.
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/InstallingPyQt.pdf}
+    \caption{Installing PyQt 4} \label{fig:InstallingPyQt}
+\end{figure}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/InstallingPyQtp2.pdf}
+    \caption{Installing PyQt 4 Part 2} \label{fig:InstallingPyQtP2}
+\end{figure}
+
+The figure above shows the PyQt set up process. Click 'Next' followed by 'I agree', followed by 'Next' and finally 'Install'. Wait for the installing process to complete. Once the installer has finished, PyQt4 will now be installed, and ready to use on your computer.
 
 \subsection{System Installation}
 
@@ -89,7 +124,6 @@ I am assuming that the user has basic computer operating skills. These include: 
 
 \subsection{Tutorial Questions}
 
-%include as many subsubsections as necessary for each question in your list
 \subsubsection{How Do I Change My Profile Picture?}
 
 \begin{figure}[H]
@@ -216,11 +250,6 @@ The figure above shows you a step by step graphical tutorial in how to change yo
 \end{enumerate}
 
 
-%Command Line Functionality?
-
-
-%REVIEW?
-
 
 \subsubsection{How Do I Contact Support?}
 
@@ -240,13 +269,59 @@ The figure above shows you a step by step graphical tutorial in how to change yo
 \end{enumerate}
 
 
+\textbf{Command Line Interface Tutorials}
+
+For the next tutorials you will need to open up the command line interface menu. This is shown below.
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/LoadingCLI.pdf}
+    \caption{Loading The CLI Menu} \label{fig:Loading CLI}
+\end{figure}
+
+\begin{enumerate}
+\item Double click the 'CLI' folder.
+\item Right click on the file named 'menu.py' and click on the 'Edit with IDLE' option.
+\item Press F5 to start up the Command Line Interface.
+\end{enumerate}
+
+\subsubsection{How Do I Add a Review?}
+
+The figure below shows the options you need to choose in order to add a review. 
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/AddReview.pdf}
+    \caption{Adding a Review in CLI} \label{fig:Add Review}
+\end{figure}
+
+
+
+\subsubsection{How Do I Edit a Review?}
+
+The figure below shows the options you need to choose in order to edit a review.
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/EditReview.pdf}
+    \caption{Editing a Review in CLI} \label{fig:Edit Review}
+\end{figure}
+
+
+\subsubsection{How Do I Delete a Review?}
+
+The figure below shows the options you need to choose in order to delete a review.
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/DeleteReview.pdf}
+    \caption{Deleting a Review in CLI} \label{fig:Delete Review}
+\end{figure}
+
+
 \subsection{Saving}
 
 My program saves information automatically due to the underlying SQL framework.
 
 \subsection{Limitations}
 
-As discussed in the introduction some sections are not fully implemented into a graphical user interface.
+As discussed in the introduction some sections are not fully implemented into a graphical user interface. This limitation has occurred due to the time limit that I had in order to complete the project.
 
 
 
@@ -254,15 +329,7 @@ As discussed in the introduction some sections are not fully implemented into a 
 
 \section{Error Recovery}
 
-\subsection{Name Field Validation}
-
-\subsection{Email Address Validation}
-
-\subsection{Profile Picture File Validation}
-
-\subsection{Trick Image File Validation}
-
-
+My program contains no errors which lead to the program needing to be recovered in any way.
 
 
 
@@ -296,5 +363,9 @@ The process for restoring the program data is shown below.
 \end{figure}
 
 \begin{enumerate}
-\item
+\item Find the device that you used to back up the program and right click on the folder and press 'copy'.
+\item Go to the location of the program on your computer.
+\item Right click in the folder location and select 'paste'.
+\item Tick the 'Do this for the next X conflicts'.
+\item Select copy and replace until the program has been fully replaced.
 \end{enumerate}
