--- a/Evaluation/evaluation.tex
+++ b/Evaluation/evaluation.tex
@@ -11,7 +11,7 @@ Below is a list of all my general and specific objectives that I set myself in t
 
 \subsection{Videos organised and filtering capabilities.}
 
-This objective has not been met.
+This objective has been partially met. The video links are organised in the tricks table in the order of TrickID.
 
 
 
@@ -124,18 +124,32 @@ This objective hasn't been met.
 
 \subsection {Ensure that the map is accurate to current roads.}
 
+This objective has been met.
+
 \subsection {Ensure location of the user is not revealed to anyone else.}
+
+This objective has been met.
 
 \subsection {Ensure that the current location marker is accurate.}
 
+This objective hasn't been met.
+
 \subsection {Ensure that when giving directions to skate parks from your current location that the mapping route is correct and on viable roads. }
 
+This objective hasn't been met.
+
 \subsection {Ensure that the program can mark skate park locations.}
+
+This objective has been met.
 
 
 \subsection {Ensure no biased reviews are posted to the app and that they're moderated before they are universally posted.}
 
-\subsection {Ensure the program runs fast without lag when navigating between areas of the application.}
+This objective has been met.
+
+\subsection {Ensure the program runs fast without lag when navigating between areas of the application.}  %Need Feedback.
+
+This objective has been met.
 
 
 
